<resources>
    <string name="app_name">To-Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_tasks_txt">Tasks</string>
    <string name="edit_txt">Edit</string>
    <string name="delete_txt">Delete</string>
    <string name="not_found_txt">Not found. Reload or add task to start.</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">Date</string>
    <string name="add_task">Add Task</string>
    <string name="time_hint">Time</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="task_time">Time</string>
    <string name="add_a_task">Add a task</string>
    <string name="des_add">Fill the details below to add a task</string>
    <string name="status">Status</string>
    <string name="change">Change</string>
    <string name="mark_completed">Mark completed</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="edit_task">Edit task</string>
    <string name="option">Option</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
</resources>