<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_rounded_radius"
        android:padding="@dimen/dp_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout_filter"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/priority"
                android:textSize="@dimen/sp_17" />

            <RadioGroup
                android:id="@+id/rg_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rb_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low"
                    android:textSize="@dimen/sp_17" />

                <RadioButton
                    android:id="@+id/rb_medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium"
                    android:textSize="@dimen/sp_17" />

                <RadioButton
                    android:id="@+id/rb_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high"
                    android:textSize="@dimen/sp_17" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/status"
                android:textSize="@dimen/sp_17" />

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_completed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/completed"
                    android:textSize="@dimen/sp_17" />

                <RadioButton
                    android:id="@+id/rb_uncompleted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uncompleted"
                    android:textSize="@dimen/sp_17" />

            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/apply"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="@dimen/dp_20" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>