<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top_rounded_radius"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Full house"
            android:textAlignment="center"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21:44 05/06/2024"
            android:alpha="0.8" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="Full House is the Grand prize in any Tambola game played. It means all 15 Numbers of a ticket are cut, striked out"
            android:alpha="0.7"
            android:textSize="@dimen/sp_17"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Low"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/sp_10"
            android:background="@drawable/bg_radius"
            android:backgroundTint="@color/card_gray_2"
            android:textSize="@dimen/sp_15"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/dp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dp_10">

            <LinearLayout
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_radius"
                android:backgroundTint="@color/card_gray_2"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_edit_outlined" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_txt"
                    android:textColor="@color/teal_700"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:background="@drawable/bg_radius"
                android:backgroundTint="@color/card_gray_2"
                android:layout_marginStart="@dimen/dp_13">

                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_delete_outlined" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_txt"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_mark_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:background="@drawable/bg_radius"
            android:backgroundTint="@color/card_gray_2"
            android:layout_marginTop="@dimen/dp_15">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_completed"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

    </LinearLayout>
</layout>